<resources>

    <!--Common-->
    <string name="app_name">GitHubUserApi</string>
    <string name="rv_avatar">rv_avatar</string>
    <string name="detailed_avatar">detailed_avatar</string>
    <string name="splashScreen">splash_screen</string>

    <!--Users Details-->
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="tab_1">Follower</string>
    <string name="tab_2">Following</string>
    <string name="you_offline">You are offline. Please, connect to the internet.</string>

    <!--Options Menu -->
    <string name="app_search">Search</string>
    <string name="search_hint">Search User</string>
    <string name="followers">Followers</string>
    <string name="username">Username</string>
    <string name="no_fav_user_text">There\'s no Favorite User to Show</string>
    <string name="favorite_user_description">Favorite User</string>

    <!--Favorite-->
    <string name="removed_from_favorite">removed from favorite</string>
    <string name="nothing_favorite_user_to_show">Nothing Favorite User to Show</string>
    <string name="title_fav_user">Favorite List</string>
    <string name="favorite_user">Favorite</string>
    <string name="added_to_favorite">added to favorite</string>
    <string name="favoriteUsers">Favorite User</string>
    <string name="switchLightDark">SwitchLightDark</string>

</resources>