<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/app_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/app_bar_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favoriteUsers"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/app_bar_switchLightDark"
        android:title="@string/switchLightDark"
        app:actionLayout="@layout/switch_item"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        app:showAsAction="always" >
    </item>
</menu>