<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTintMode="multiply"
        android:background="@color/material_on_primary_disabled">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageView
                android:id="@+id/user_avatar"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/detailed_avatar"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_avatar"
                app:layout_constraintTop_toTopOf="@+id/user_avatar"
                tools:text="Name" />

            <TextView
                android:id="@+id/tv_user_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                tools:text="Location" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_company"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_location"
                tools:text="Company" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_company">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/followers_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/followers"
                        app:drawableStartCompat="@drawable/ic_people" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/following_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/following"
                        app:drawableStartCompat="@drawable/ic_people" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repository_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:text="@string/repository"
                        app:drawableStartCompat="@drawable/ic_repository" />
                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_identitiy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/user_avatar"
                app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                tools:text="@string/username" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:background="@color/material_on_primary_disabled"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:tabBackground="@drawable/shape_rectangle_outline_half_rounded_bottom_darkgrey"
            app:tabIndicatorColor="@color/colorGithubActive"
            app:tabSelectedTextColor="@color/colorGithubActive"
            app:tabTextColor="@android:color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorGithubActive"
        android:clickable="true"
        android:contentDescription="@string/favorite_user_description"
        android:elevation="8dp"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:src="@drawable/ic_favorite_borderline"
        app:fabSize="normal"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>